<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Local e Rede</string>
    <string name="action_settings">Settings</string>
    <string name="gps">GPS</string>
    <string name="network">NETWORK</string>
    <string name="lat">Latitude: </string>
	<string name="longi">Longitude: </string>
	<string name="pre">Precisão: </string>
	<string name="dist">Distância entre GPS e NETWORK: </string>
	<string name="bt">Atualizar </string>
	</resources>
