<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/gps" />

    <TextView
        android:id="@+id/gps_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat" />

    <TextView
        android:id="@+id/gps_longi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longi" />

    <TextView
        android:id="@+id/gps_pre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="2dp"
        android:text="@string/network" />

    <TextView
        android:id="@+id/net_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat" />

    <TextView
        android:id="@+id/net_longi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longi" />

    <TextView
        android:id="@+id/net_pre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre" />

    <TextView
        android:id="@+id/dist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/dist" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="atualizar"
        android:text="@string/bt" />

</LinearLayout>